--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ iframe, .girar{
 } */
 
 .draggable {
-    padding: 0.2rem;
+    /* padding: 0.2rem; */
     /* background-color: white; */
     /* border: 1px solid black; */
     /* width: 50PX; */
