--- a/css/ruleta.css
+++ b/css/ruleta.css
@@ -4,10 +4,30 @@
 }
 
 
-.popup_box{
 
+/* @media only screen and (max-device-width : 1200px) {
+    .popup_box{
+        width: 1200px;
+    }
+} */
+
+@media only screen and (min-device-width : 1200px) {
+    .popup_box, #resultado{
+        width: 100%;
+    }
+}
+
+@media only screen and (max-device-width : 1200px) {
+    .popup_box, #resultado{
+        width: 1200px;
+    }
+}
+
+.popup_box{
     position: absolute;
-    width: 100%;
+    margin-top: 100px;
+    /* width: 100%; */
+    /* width: 1200px; */
 
     user-select: none;
     background: #f2f2f2;
@@ -25,11 +45,11 @@
 }
 
 #resultado{
-
     position: absolute;
+    margin-top: 100px;
     /* display: block; */
     /* top: 500px; */
-    width: 100%;
+    /* width: 1200px; */
 
     user-select: none;
     background: #f2f2f2;
@@ -105,13 +125,28 @@
 
 
 
-
+/* 
 #puntajeFinal{
     margin: auto;
     margin-left: 4rem;
     font-size: 2rem;
     color: white; 
+} */
+
+
+#intentos{
+    position: absolute;
+    background: #2981bc;
+    border: 1px solid #0059b3;
+    padding: 10px;
+    border-radius: 10px;
+
+    margin: auto;
+    margin-left: 4rem;
+    font-size: 2rem;
+    color: white; 
 }
+
 
 
 #canvas{
@@ -132,6 +167,7 @@
     padding: 10px 15px;
     border: 1px solid #0059b3;
     border-radius: 5px;
+    margin-bottom: 50px;
     /* pointer-events: auto; */
 }
 
@@ -139,24 +175,4 @@
     background: #3a93cf; 
 }
 
-.subTit{
-    text-align: center;
-    align-content: center;
-    justify-self: center;
-    background: #3967b1;
-    color: white;
-}
 
-
-#intentos{
-    position: absolute;
-    background: #2981bc;
-    border: 1px solid #0059b3;
-    padding: 10px;
-    border-radius: 10px;
-
-    margin: auto;
-    margin-left: 4rem;
-    font-size: 2rem;
-    color: white; 
-}
