--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,14 @@ body {
 }
 
 
-
+.subHeader{
+    width: 80%;
+    margin: auto;
+    font-size: 2rem;
+    line-height : 4rem;
+    text-align: center;
+    color: white;
+}
 
 
 .presentacion{
